--- a/live.html
+++ b/live.html
@@ -331,10 +331,16 @@
    ✅ ПРАВКИ ТІЛЬКИ ПО ТВОЄМУ ЗАПИТУ (БЕЗ ІНШИХ ЗМІН)
    1) Велика рамка зон — radius 5
    2) В зоні: стискаємо "Команда" і даємо місце під "4/24.79"
+   3) Велика рамка таблиці зважувань — radius 5
    ======================================================= */
 
 /* 1) тільки ПЕРША велика рамка (та що "Зони A/B/C") */
 .live-left > .card:first-child{
+  border-radius: 5px !important;
+}
+
+/* 3) ДРУГА велика рамка (та що "Таблиця зважувань") */
+.live-left > .card:nth-child(2){
   border-radius: 5px !important;
 }
 
