--- a/admin-accounts.html
+++ b/admin-accounts.html
@@ -288,7 +288,7 @@ tbody tr:hover td{
 
     return `
       <tr data-uid="${uid}">
-        <td><span class="tag">${uid}</span></td>
+        <td><span class="uidText">${uid}</span></td>
         <td><input class="mini" data-k="fullName" value="${fullName}" placeholder="Імʼя" /></td>
         <td><input class="mini" data-k="email" value="${email}" placeholder="Email" /></td>
         <td><input class="mini" data-k="phone" value="${phone}" placeholder="Телефон" /></td>
