--- a/admin-accounts.html
+++ b/admin-accounts.html
@@ -51,48 +51,78 @@
       color:#e5e7eb; font-size:.82rem; white-space:nowrap;
     }
 
-    .tableWrap{
-      overflow:auto;
-      border-radius:14px;
-      border:1px solid rgba(148,163,184,.18);
-      background:rgba(2,6,23,.25);
-    }
-    table{ width:100%; border-collapse:collapse; min-width:980px; }
-    th,td{
-      padding:10px 10px;
-      border-bottom:1px solid rgba(148,163,184,.12);
-      text-align:left;
-      vertical-align:middle;
-      color:#e5e7eb;
-      font-size:.92rem;
-    }
-    th{
-      position:sticky; top:0;
-      background:rgba(2,6,23,.72);
-      backdrop-filter: blur(6px);
-      z-index:2;
-      font-size:.82rem;
-      text-transform:uppercase;
-      letter-spacing:.08em;
-      color:#cbd5e1;
-    }
-    /* === Табличні поля без рамок (рамка тільки при редагуванні) === */
-.mini{
-  width:100%;
-  padding:8px 8px;
-  border-radius:10px;
-
-  border:1px solid transparent;   /* прибрали рамку */
-  background:transparent;         /* прибрали фон */
-  color:#e5e7eb;
-  outline:none;
-  font-size:.92rem;
+/* ===== Таблиця-сітка з автошириною під контент ===== */
+.tableWrap{
+  overflow:auto;
+  border-radius:12px;
+  border:1px solid rgba(148,163,184,.30);
+  background:rgba(2,6,23,.18);
 }
 
+/* Важливо: width:max-content -> таблиця розширюється по контенту */
+table{
+  width:max-content;           /* авто-розширення */
+  min-width:100%;              /* але не менше контейнера */
+  border-collapse:collapse;    /* без зазорів між клітинками */
+}
+
+th, td{
+  border:1px solid rgba(148,163,184,.22); /* перегородки */
+  padding:6px 8px;                        /* мінімальні відступи */
+  vertical-align:middle;
+  text-align:left;
+  color:#e5e7eb;
+  font-size:.92rem;
+
+  white-space:nowrap;          /* весь текст в рядок */
+  overflow:visible;            /* нічого не ховаємо */
+}
+
+/* Хедер липкий */
+th{
+  position:sticky;
+  top:0;
+  z-index:2;
+  background:rgba(2,6,23,.88);
+  backdrop-filter: blur(8px);
+  font-size:.78rem;
+  text-transform:uppercase;
+  letter-spacing:.10em;
+  color:#cbd5e1;
+}
+
+/* Підсвітка рядка */
+tbody tr:hover td{
+  background:rgba(148,163,184,.06);
+}
+
+/* ===== Вміст клітинок без “зазорів” і без капсул ===== */
+.mini{
+  width:100%;
+  margin:0;
+  padding:0;                 /* нема зазорів між клітинкою і текстом */
+  border:0;
+  outline:none;
+  background:transparent;
+  color:#e5e7eb;
+  font-size:inherit;
+  line-height:1.2;
+}
+
+/* Щоб інпути не робили колонку широкою через мінімальну ширину */
+input.mini{ min-width:0; }
+
+/* Фокус — легке підсвічування, але без збільшення відступів */
 .mini:focus{
-  border-color:var(--accent);
-  background:rgba(2,6,23,.55);
-  box-shadow:0 0 0 3px rgba(246,195,76,.16);
+  background:rgba(246,195,76,.10);
+  box-shadow: inset 0 0 0 2px rgba(246,195,76,.45);
+}
+
+/* UID як моноширинний текст */
+.uidCell{
+  font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono","Courier New", monospace;
+  font-size:.82rem;
+  color:#cbd5e1;
 }
 
 /* UID без плашки/обводки */
